tests/paczka1/small_fuzzy/86719177.err
Error in line 2: C95u9szjdM S34 44,4
Error in line 7: C95u9szjdM A572 64,5
Error in line 3: DTSU3C A918 9,8
Error in line 10: DTSU3C A753 29,1
